# OpenGit

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.md  deploy.sh  docker-compose.yml  install.sh  release.sh  rust-toolchain.toml  start.sh  test_5kb.txt
.cargo/: config.toml
.github/workflows/: ci.yml  debug.yml  release.yml
config/: identities.yaml  mirrors.toml  plugins.toml  policies.yaml  server.toml
config/samples/: ai-audit.toml  ai-guard.toml  branch-protection.toml  code-fingerprint.toml  email.toml.example  mirrors.toml  plugins.toml  policies.yaml  rate-limit.toml  server.toml  token-policy.toml  webhooks.yaml
crates/opengit-cli/: Cargo.toml
crates/opengit-cli/src/: main.rs
crates/opengit-core/: Cargo.toml
crates/opengit-core/src/: ai_audit.rs  ai_guard.rs  audit.rs  branch_protection.rs  code_fingerprint.rs  email_notifier.rs  file_append.rs  group.rs  hook.rs  identity.rs  import.rs  lib.rs  mirror.rs  performance.rs  plugin.rs  policy.rs  rate_limiter.rs  repository.rs  security.rs  tls.rs  token_policy.rs  webhook.rs
crates/opengit-dashboard/: Cargo.toml
crates/opengit-dashboard/src/: lib.rs
crates/opengit-hooks/: Cargo.toml
crates/opengit-hooks/src/: post_receive.rs  pre_receive.rs  update.rs
crates/opengit-server/: Cargo.toml
crates/opengit-server/src/: agent_api.rs  api.rs  config.rs  main.rs  middleware.rs  smart_http.rs  stats.rs  web_ui.rs  webhook.rs
crates/opengit-ssh/: Cargo.toml
crates/opengit-ssh/src/: main.rs
crates/opengit-storage/: Cargo.toml
crates/opengit-storage/src/: hooks.rs  lib.rs  manager.rs
docs/: email-notifications.md  prd.md
docs/adr/: ADR-001-web-dashboard.md  ADR-002-agent-api.md
