[workspace]
members = [
    "crates/opengit-core",
    "crates/opengit-server",
    "crates/opengit-hooks",
    "crates/opengit-storage",
    "crates/opengit-cli",
    "crates/opengit-ssh",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/youbanzhishi/OpenGit"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.20"
sha2 = "0.10"
hex = "0.4"
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
