[package]
name = "opengit-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "og"
path = "src/main.rs"

[dependencies]
opengit-core = { path = "../opengit-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
