[package]
name = "opengit-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
git2 = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
regex = "1"
ahash = "0.8"
url = "2"
rustls = "0.23.20"
tokio-rustls = "0.26.0"
rustls-pemfile = "0.15"
rcgen = "0.13.2"
aes-gcm = "0.10"
hmac-sha256 = "0.2"
