[package]
name = "opengit-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "opengit"
path = "src/main.rs"

[dependencies]
opengit-core = { path = "../opengit-core" }
opengit-storage = { path = "../opengit-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
git2 = { workspace = true }
hex = { workspace = true }
clap = { version = "4", features = ["derive"] }
tokio-util = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hmac = { version = "0.12", features = ["reset"] }
