[package]
name = "opengit-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "opengit-server"
path = "src/main.rs"

[dependencies]
opengit-core = { path = "../opengit-core" }
opengit-storage = { path = "../opengit-storage" }
opengit-dashboard = { path = "../opengit-dashboard" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio-util = { workspace = true }
