[package]
name = "opengit-ssh"
version.workspace = true
edition.workspace = true

[[bin]]
name = "opengit-sshd"
path = "src/main.rs"

[dependencies]
opengit-core = { path = "../opengit-core" }
opengit-storage = { path = "../opengit-storage" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
russh = { workspace = true }
russh-keys = { workspace = true }
