[package]
name = "opengit-ssh"
version.workspace = true
edition.workspace = true

[[bin]]
name = "opengit-sshd"
path = "src/main.rs"

[dependencies]
opengit-core = { path = "../opengit-core" }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
